--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "laravel-mix": "^0.8.1",
     "lodash": "^4.17.4",
     "tether": "^1.4.0",
+    "tether-shepherd": "^1.8.1",
     "vue": "^2.1.10"
   }
 }
