--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.4",
     "tether": "^1.4.0",
     "tether-shepherd": "^1.8.1",
+    "velocity-animate": "^1.5.0",
     "vue": "^2.1.10"
   }
 }
