--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "axios": "^0.15.3",
     "bootstrap-sass": "^3.3.7",
+    "cssuseragent": "^2.1.31",
     "gulp": "^3.9.1",
     "gulp-svg-symbols": "^2.0.2",
     "in-view": "^0.6.0",
