--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 /node_modules
 /public/storage
-/public/css/
-/public/js/
 /vendor
 /.idea
 Homestead.json
 Homestead.yaml
 .env
+
+#auto generated files
+/public/css/
+/public/js/
+/public/mix-manifest.json
+/resources/assets/js/components/icon-system.js
