--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "private": true,
-  "scripts": {
-    "dev": "gulp dev; node node_modules/webpack/bin/webpack.js --progress --hide-modules --config=$npm_package_config_webpack",
-    "watch": "npm run dev -- -w",
-    "watch-poll": "npm run dev -- -w --watch-poll",
-    "hot": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=$npm_package_config_webpack",
-    "production": "npm run dev -- -p"
+   "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
-  "config": {
-    "webpack": "node_modules/laravel-mix/setup/webpack.config.js"
-  },
+
   "devDependencies": {
     "axios": "^0.15.3",
-    "bootstrap-sass": "^3.3.7",
+    "cross-env": "^5.0.1",
+    "laravel-mix": "^1.2.2",
     "browser-sync": "^2.18.12",
     "browser-sync-webpack-plugin": "^1.2.0",
+
     "cssuseragent": "^2.1.31",
     "gulp": "^3.9.1",
     "gulp-svg-symbols": "^2.0.2",
     "in-view": "^0.6.0",
-    "jquery": "^3.1.1",
-    "laravel-mix": "^1.2.2",
     "lodash": "^4.17.4",
     "tether": "^1.4.0",
     "tether-shepherd": "^1.8.1",
