--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
-  {
+{
   "private": true,
-   "scripts": {
+  "scripts": {
     "dev": "npm run development",
     "development": "gulp build; cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
@@ -9,15 +9,16 @@
     "prod": "npm run production",
     "production": "gulp build; cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
-
   "devDependencies": {
     "axios": "^0.15.3",
     "cross-env": "^5.0.1",
-    "laravel-mix": "^1.4.2",
     "cssuseragent": "^2.1.31",
+    "flickity": "^2.0.9",
+    "flickity-imagesloaded": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-svg-symbols": "^2.0.2",
     "in-view": "^0.6.0",
+    "laravel-mix": "^1.4.2",
     "lodash": "^4.17.4",
     "tether": "^1.4.0",
     "tether-shepherd": "^1.8.1",
