--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {
     "axios": "^0.15.3",
+    "browser-sync": "^2.18.13",
+    "browser-sync-webpack-plugin": "^1.2.0",
     "cross-env": "^5.0.1",
     "cssuseragent": "^2.1.31",
     "flickity": "^2.0.10",
